# Lab_1_OS

./: LICENSE  README.md
OS_LAB_1/: CMakeLists.txt  CMakePresets.json
OS_LAB_1/OsLab1/: OsLab1.cpp
OS_LAB_1/common/: employee.h
OS_LAB_1/creator/: creator.cpp
OS_LAB_1/reporter/: reporter.cpp
